visibility hidden fix

--- a/css/app.styl
+++ b/css/app.styl
@@ -60,9 +60,9 @@ canvas
 		line-height: 2.4rem
 a
 	color: #fff
-	text-decoration: none
+	text-decoration: underline
 	&:hover
-		text-decoration: underline
+		text-decoration: none
 
 .click
 	width: 60px
@@ -112,6 +112,7 @@ a
 	position: fixed
 	top: 50%
 	width: 100%
+	visibility: visible
 	cursor: pointer
 	transition: 0.3s ease all
 	left: 50%
@@ -137,6 +138,7 @@ a
 			transform: scale(1.01)
 .hidden
 	opacity: 0
+	visibility: hidden
 		
 .english-letter
 	clear: both
